# shelvez

./: .gitignore  .pre-commit-config.yaml  README.md  profile_hotpaths.py  pyproject.toml
.github/workflows/: publish-to-pypi-uv.yml
shelvez/: __init__.py  diskcache.py  serialer.py  serializer.py  shelve.py  sqlcache.py  sqlite.py  utils.py  zstd.py
tests/: conftest.py  test_diskcache.py  test_serialer.py  test_serializer.py  test_shelve.py  test_sqlcache.py  test_sqlite.py  test_zstd.py
tests/benchmarks/: test_shelve_bench.py
